--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,15 @@ $breakpoints:  (
 );
 
 //--- Colors
+$primary : #fb8c00;
+$primary_light : #ffbd45;
+$primary_dark : #c25e00;
+
+
+$secondary : #121212;
+$secondary_light : #484848;
+$secondary_dark : #000000;
+
 $title : rgba(143, 88, 2, 1);
 $blackbg : #121212;
 $main-primary : rgba(231, 154, 33, 1);
