--- a/src/app.scss
+++ b/src/app.scss
@@ -19,6 +19,7 @@
 @import './components/moviecard/moviecard';
 @import './components/Top Rated Movie/topratedmovie';
 @import './components/moviecard/moviecard';
+@import './components/LastestRelease/lastReleases'
 
 //----import components folder
 
