--- a/src/app.css
+++ b/src/app.css
@@ -260,4 +260,46 @@ h1 {
   color: rgba(235, 230, 225, 0.944);
   font-size: 0.6rem;
   padding: 0.2rem;
+}
+
+.last-release {
+  display: flex;
+  flex-direction: column;
+  max-height: 80vh;
+  padding: 2rem 0;
+  margin-bottom: 3rem;
+}
+.last-release h2 {
+  color: white;
+  font-size: 1.7rem;
+  padding: 1rem 0 1rem 0.5rem;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  font-size: 1.2rem;
+}
+.swiper .swiper-pagination-bullet {
+  color: red;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
 }/*# sourceMappingURL=app.css.map */
