--- a/src/components/LastestRelease/_lastReleases.scss
+++ b/src/components/LastestRelease/_lastReleases.scss
@@ -18,7 +18,6 @@
   display: flex;
   flex-direction: column;
   max-height: 80vh;
-  // height: 500px;
   padding: 2rem 0;
   margin-bottom: 3rem;
   h2 {
@@ -28,8 +27,8 @@
   }
 }
 .swiper {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: auto;
   font-size: 1.2rem;
   // display: flex;
   // gap : 20px ;
@@ -41,9 +40,11 @@
 }
 
 .swiper-slide {
+  position: relative;
+  height: auto;
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: transparent;
 
   /* Center slide text vertically */
   display: -webkit-box;
@@ -58,14 +59,36 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+  flex-direction: column;
 
+  p {
+    padding: 3rem 2rem;
+    color: white;
+    flex: 1 1 10%;
+  }
+
+  .not-avaiable-icon  {
+    flex: 2 1 80%;
+  }
+
+  h3  {
+    position: absolute;
+    bottom: 30px;
+    right: 25px;
+    background-color: black;
+    color: white;
+  }
   
 }
 
 .swiper-slide img {
+
   display: block;
+  aspect-ratio: 16/9;
   width: 100%;
-  height: 100%;
-  object-fit: contain;
+  height: auto;
+  object-fit: cover;
   object-position: center;
+  // border-radius: 18px;
+  // border: 3px solid $primary;
 }
