--- a/src/components/Navigation/_navigation.scss
+++ b/src/components/Navigation/_navigation.scss
@@ -1,11 +1,13 @@
 .nav {
     position: fixed;
+    z-index: 5;
     width: 100%;
     min-height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     padding: 0 15px;
+    background-color: $secondary;
 
     .logo  {
         display: flex;
