--- a/src/components/Top Rated Movie/_topratedmovie.scss
+++ b/src/components/Top Rated Movie/_topratedmovie.scss
@@ -6,17 +6,23 @@
     padding: 0 0 15px 0;
 
     h2 {
+        font-family: 'Merriweather', serif;
+        letter-spacing: 1px;
         color: $white;
         font-size: 1.8rem;
-        font-weight: 500;
+        font-weight: 700;
         padding: 0.5rem;
     }
-    
+    .outer-cards-container {
+        cursor:grab;
+        overflow: hidden;
+        display: flex;
+
     .cards-container  {
         display: flex;
-        overflow-x: scroll;
         flex-wrap: nowrap;
         column-gap: 15px;
         padding: 1rem 1.5rem;
+        }
     }
 }
