--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,11 +10,12 @@ $breakpoints:  (
 $primary : #fb8c00;
 $primary_light : #ffbd45;
 $primary_dark : #c25e00;
-
-
 $secondary : #121212;
 $secondary_light : #484848;
 $secondary_dark : #000000;
+
+$red_icon : rgb(219, 30, 30);
+$yellow_star: rgb(234, 223, 14);
 
 $title : rgba(143, 88, 2, 1);
 $blackbg : #121212;
