--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Merriweather:wght@300;400;700&display=swap");
-.body {
+body {
   font-size: 62.5%;
+  overflow-x: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 *, *:before, *:after {
@@ -178,6 +185,14 @@ h1 {
   overflow: hidden;
   padding: 0 0 15px 0;
 }
+.genre-list h2 {
+  font-family: "Merriweather", serif;
+  letter-spacing: 1px;
+  color: rgba(235, 230, 225, 0.944);
+  font-size: 1.8rem;
+  font-weight: 700;
+  padding: 0.5rem;
+}
 .genre-list .outer-cards-container {
   cursor: -webkit-grab;
   cursor: grab;
@@ -235,7 +250,7 @@ h1 {
 }
 .movie-card img {
   aspect-ratio: 2/3;
-  height: 225px;
+  height: auto;
   width: 100%;
   -o-object-fit: fill;
      object-fit: fill;
@@ -286,8 +301,11 @@ h1 {
 .modal {
   font-family: "Lato", sans-serif;
   position: absolute;
-  height: 80%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   width: 80%;
+  max-width: 1200px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -298,9 +316,80 @@ h1 {
   flex-direction: column;
   background-color: #121212;
   color: rgba(235, 230, 225, 0.944);
+  padding: 0.7rem;
+  line-height: 1.3;
+  border-radius: 6px;
+}
+.modal__close-icon {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 .modal img {
   aspect-ratio: 2/3;
+  border-radius: 9px;
+}
+.modal__title {
+  font-family: "Merriweather", serif;
+  font-weight: 700;
+  padding: 1rem;
+  text-align: center;
+}
+.modal__synopsis {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 0.9rem;
+}
+.modal__labels {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 1rem;
+  width: 100%;
+}
+.modal__genre {
+  flex: 2 1 25%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 7px;
+  flex-wrap: wrap;
+  align-content: center;
+}
+.modal__genre .genre-name {
+  font-size: 0.6rem;
+  background-color: #fb8c00;
+  color: rgba(235, 230, 225, 0.944);
+  font-weight: 700;
+  padding: 0.2rem 0.6rem;
+  border-radius: 22px;
+}
+.modal__release--date {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 0.7rem;
+  padding: 0.5rem;
+  display: flex;
+  flex: 1 1 25%;
+  border-radius: 21px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  justify-content: center;
+  background-color: #c25e00;
+}
+.modal__rating {
+  flex: 4 1 50%;
+  display: flex;
+  justify-content: flex-end;
+  color: rgba(235, 230, 225, 0.944);
+  padding: 0.1rem 0.3rem 0.5rem 0.3rem;
+  font-size: 0.7rem;
+  align-items: baseline;
+}
+.modal__rating__star-icon svg {
+  fill: rgb(234, 223, 14);
+  stroke: rgb(234, 223, 14);
+  stroke-width: 1px;
 }
 
 .top-rated-movie {
@@ -344,7 +433,7 @@ h1 {
 }
 .movie-card img {
   aspect-ratio: 2/3;
-  height: 225px;
+  height: auto;
   width: 100%;
   -o-object-fit: fill;
      object-fit: fill;
@@ -395,8 +484,11 @@ h1 {
 .modal {
   font-family: "Lato", sans-serif;
   position: absolute;
-  height: 80%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   width: 80%;
+  max-width: 1200px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -407,9 +499,80 @@ h1 {
   flex-direction: column;
   background-color: #121212;
   color: rgba(235, 230, 225, 0.944);
+  padding: 0.7rem;
+  line-height: 1.3;
+  border-radius: 6px;
+}
+.modal__close-icon {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 .modal img {
   aspect-ratio: 2/3;
+  border-radius: 9px;
+}
+.modal__title {
+  font-family: "Merriweather", serif;
+  font-weight: 700;
+  padding: 1rem;
+  text-align: center;
+}
+.modal__synopsis {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 0.9rem;
+}
+.modal__labels {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 1rem;
+  width: 100%;
+}
+.modal__genre {
+  flex: 2 1 25%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 7px;
+  flex-wrap: wrap;
+  align-content: center;
+}
+.modal__genre .genre-name {
+  font-size: 0.6rem;
+  background-color: #fb8c00;
+  color: rgba(235, 230, 225, 0.944);
+  font-weight: 700;
+  padding: 0.2rem 0.6rem;
+  border-radius: 22px;
+}
+.modal__release--date {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 0.7rem;
+  padding: 0.5rem;
+  display: flex;
+  flex: 1 1 25%;
+  border-radius: 21px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  justify-content: center;
+  background-color: #c25e00;
+}
+.modal__rating {
+  flex: 4 1 50%;
+  display: flex;
+  justify-content: flex-end;
+  color: rgba(235, 230, 225, 0.944);
+  padding: 0.1rem 0.3rem 0.5rem 0.3rem;
+  font-size: 0.7rem;
+  align-items: baseline;
+}
+.modal__rating__star-icon svg {
+  fill: rgb(234, 223, 14);
+  stroke: rgb(234, 223, 14);
+  stroke-width: 1px;
 }
 
 .last-release {
