--- a/src/components/moviecard/_moviecard.scss
+++ b/src/components/moviecard/_moviecard.scss
@@ -12,7 +12,7 @@
 
     img {
         aspect-ratio: 2/3;
-        height: 225px;
+        height: auto;
         width: 100%;
         object-fit: fill;
         box-shadow: 0px -40px 60px 0px rgba(255, 255, 255, 0.414);
@@ -74,8 +74,9 @@
 .modal  {
     font-family: 'Lato', sans-serif;
     position: absolute;
-    height: 80%;
+    height: fit-content;
     width: 80%;
+    max-width: 1200px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -86,9 +87,91 @@
     flex-direction: column;
     background-color: $secondary;
     color: $white;
+    padding: 0.7rem;
+    line-height: 1.3;
+    border-radius: 6px;
+
+
+    &__close-icon {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
 
     img {
         aspect-ratio: 2/3;
+        border-radius: 9px;
       
+    }
+
+    &__title  {
+        font-family: 'Merriweather', serif;
+        font-weight: 700;
+        padding: 1rem;
+        text-align: center;
+    }
+
+    &__synopsis  {
+        font-family: 'Lato', sans-serif;
+        font-weight: 400;
+        font-size: 0.9rem;
+    }
+    &__labels  {
+        display: flex;
+        justify-content: flex-start;
+        margin-top: 1rem;
+        width: 100%;
+
+    }
+
+    &__genre  {
+        flex: 2 1 25%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 7px;
+        flex-wrap: wrap;
+        align-content: center;
+
+        .genre-name  {   
+            font-size: 0.6rem;
+            background-color: $primary;
+            color: $white;
+            font-weight: 700;
+            padding: 0.2rem 0.6rem;
+            border-radius: 22px;
+        }
+    }
+    &__release--date  {
+        font-family: 'Lato', sans-serif;
+        font-weight: 700;
+        font-size: 0.7rem;
+        padding: 0.5rem;
+        display: flex;
+        flex: 1 1 25%;
+        border-radius: 21px;
+        height: fit-content;
+        justify-content: center;
+        background-color: $primary_dark;
+
+    }
+
+    &__rating {
+        flex: 4 1 50%;
+        display: flex;
+        justify-content: flex-end;
+        color: $white;
+        padding: 0.1rem 0.3rem 0.5rem 0.3rem;
+        font-size: 0.7rem;
+        align-items: baseline;
+
+        &__star-icon  {
+            svg {
+                fill: $yellow_star;
+                stroke: $yellow_star;
+                stroke-width: 1px;
+            }
+        }
+
     }
 }
