--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -1,6 +1,7 @@
 .app  {
     background-color: $blackbg;
     min-height: 100vh;
+  
 
     .main  {
         padding-top: $heightheader;
@@ -130,6 +131,15 @@ h1 {
     overflow: hidden;
     padding: 0 0 15px 0;
     
+    h2 {
+        font-family: 'Merriweather', serif;
+        letter-spacing: 1px;
+        color: $white;
+        font-size: 1.8rem;
+        font-weight: 700;
+        padding: 0.5rem;
+    }
+
     .outer-cards-container {
         cursor:grab;
         overflow: hidden;
