--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,9 @@
-.body {
+body {
     font-size: 62.5%;
+    overflow-x: hidden;
+    -ms-overflow-style: none;  
+    scrollbar-width: none;  
+}
+body::-webkit-scrollbar  {
+    display: none;
 }
