--- a/src/app.scss
+++ b/src/app.scss
@@ -19,7 +19,9 @@
 @import './components/moviecard/moviecard';
 @import './components/Top Rated Movie/topratedmovie';
 @import './components/moviecard/moviecard';
-@import './components/LastestRelease/lastReleases'
+@import './components/LastestRelease/lastReleases';
+@import 'components/SearchBar/search';
+@import './components/list-container'
 
 //----import components folder
 
