--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -1,13 +1,48 @@
 .app  {
     background-color: $blackbg;
     min-height: 100vh;
+
+    .header  {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        position: fixed;
+        height: 50px;
+
+        .nav {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 0.5rem;
+
+        }
+        .search__container  {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 3.5rem;
+
+        }
+        .avatar  {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 0.5rem;
+            border: 2px solid $main-primary;
+            border-radius: 50%;
+            width: $avatar-size;
+            height: $avatar-size;
+            align-self: center;
+    
+        }
+    }
   
 
     .main  {
         padding-top: $heightheader;
     }
     
-
 }
 h1 {
     color: white;
@@ -16,113 +51,7 @@ h1 {
 
 }
 
-.search__container  {
-    position: fixed;
-    z-index: 10;
-    top: 80px;
-    width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-end;
-    flex-direction: column;
 
-    .search  {
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: transparent;
-        border: none;
-
-
-        &__input  {
-            color: white;
-            box-shadow: 0 0 10px 5px rgba(231, 155, 33, 0.129);
-            border: none;
-            border-radius: 50%;
-            padding: 0.5rem 0.5rem;
-            font-family: inherit;
-            outline: none;
-            width: 2rem;
-            height: 2rem;
-            background-color: rgba(46, 35, 8, 0.656);
-            transition: border-radius 0.5s ease-in-out,
-                        width 0.5s ease-in-out;
-                        
-                        &:not(:placeholder-shown) ~ .search__backspace{
-                            display: block;
-                        }
-                        
-                        &::placeholder  {
-                padding-left: 0px;
-                color: white;
-            }
-            
-            &.isactive {
-                border-radius: 36px;
-                width: 85vw;            
-                padding-left: 35px;
-            }
-
-        }
-
-        &__icon {
-            position: absolute;
-            cursor: pointer;
-            z-index: 10;
-
-            &.isactive {
-                left: 10px;
-            }
-
-        }
-        &__close {
-            position: absolute;
-            display: none;
-            right: 0;
-            padding: 1.5rem;
-            cursor: pointer;
-            transition: 0.5s ease-in;
-
-            &.isactive{
-              display: block;
-               right: -15px;
-            }
-
-        }
-        &__backspace  {
-            display: none;
-            position: absolute;
-            cursor: pointer;
-
-            &.isactive {
-                display: block;
-                right: 35px;
-            }
- 
-        }
-    }
-    .result {
-        display: none;
-
-        &.isactive {
-        display: flex;
-        color: white;
-        flex-direction: column;
-        text-align: end;
-        padding: 1rem 0.5rem 1rem 0;
-        background-color: $secondary_dark;
-        
-        li {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            height: 20px;
-            align-items: center;
-            }
-        }
-    }
-}
 
 .genre-list  {
     display: flex;
