--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,7 +10,7 @@ $breakpoints:  (
 $primary : #fb8c00;
 $primary_light : #ffbd45;
 $primary_dark : #c25e00;
-$secondary : #121212;
+$secondary : #0b0b0b;
 $secondary_light : #484848;
 $secondary_dark : #000000;
 
