--- a/src/components/_list-container.scss
+++ b/src/components/_list-container.scss
@@ -112,6 +112,7 @@
     flex-direction: column;
     border: 2px solid green;
     padding: 2rem 0;
+    height: 600px;
 
 
     h2 {
@@ -123,19 +124,28 @@
 }
 
 .recommendation--swiper  {
+    display: grid;
     width: 100%;
     height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 1.5rem;
+  
+    // margin-left: auto;
+    // margin-right: auto;
     
+   
 
     .swiper-slide {
+        border: 1px solid blue;
         border-radius: 18px;
+        align-items: stretch;
+        height: 100%;
+        // height: 100px;
+        // width: 100px;
         text-align: center;
         font-size: 18px;
-        background: #fff;
-        height: calc((100% - 30px) / 2) !important;
+        background-color: #fff;
+        // height: calc((100% - 30px) / 2) !important;
       
         /* Center slide text vertically */
         display: -webkit-box;
