data management done

--- a/src/app.scss
+++ b/src/app.scss
@@ -16,12 +16,11 @@
 @import './pages/Likes/likes';
 @import './components/Logo/logo';
 @import './components/Navigation/navigation';
-@import './components/moviecard/moviecard';
-@import './components/Top Rated Movie/topratedmovie';
-@import './components/moviecard/moviecard';
-@import './components/LastestRelease/lastReleases';
 @import 'components/SearchBar/search';
-@import './components/list-container'
+@import './components/Cards/cards';
+@import './components/Container/list-container'
+
+
 
 //----import components folder
 
