--- a/src/components/Cards/_cards.scss
+++ b/src/components/Cards/_cards.scss
@@ -175,3 +175,22 @@
 
     }
 }
+
+.recommend-card  {
+    position: relative;
+    border-radius: 15px;
+    overflow: hidden;
+
+
+    img {
+        width: 100%;
+    }
+
+    p  {
+        position: absolute;
+        bottom: 10px;
+        padding-left: 5px;
+        font-size: 0.6rem;
+        color: $white;
+    }
+}
