--- a/src/components/Container/_list-container.scss
+++ b/src/components/Container/_list-container.scss
@@ -110,16 +110,15 @@
 .recommendation--list  {
     display: flex;
     flex-direction: column;
-    border: 2px solid green;
-    padding: 2rem 0;
+    padding: 2rem 1rem 3rem 1rem;
     height: 600px;
+    height: fit-content;
 
 
     h2 {
         color: white;
         // font-size: 1rem;
         // padding: 1rem 0 1rem 0.5rem;
-        border: 1px solid red;
       }
 }
 
@@ -127,8 +126,9 @@
     display: grid;
     width: 100%;
     height: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+    gap: 20px;
+   
   
     // margin-left: auto;
     // margin-right: auto;
@@ -136,7 +136,7 @@
    
 
     .swiper-slide {
-        border: 1px solid blue;
+        border: 3px solid blue;
         border-radius: 18px;
         align-items: stretch;
         height: 100%;
