--- a/src/components/SearchBar/_search.scss
+++ b/src/components/SearchBar/_search.scss
@@ -104,3 +104,32 @@
         }
     }
 }
+
+.search--result__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+    overflow-y: scroll;
+    padding-bottom: 50px;
+    
+}
+.search--result__wrapper {
+    padding-top: 50px;
+    height: 90vh;
+    width: 90%;
+    display: grid;
+    // grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    color: white;
+    display: flex;
+    flex-direction: column;
+    row-gap: 70px;
+  
+
+
+    h1 {
+        text-align: center;
+    }
+
+}
