--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -47,7 +47,7 @@
 }
 h1 {
     color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Merriweather', serif;
     font-size: 3rem;
 
 }
