--- a/src/components/hamburger/hamburgers.scss
+++ b/src/components/hamburger/hamburgers.scss
@@ -9,7 +9,7 @@
 
 // Settings
 // ==================================================
-$hamburger-padding-x           : 0px !default;
+$hamburger-padding-x           : 10px !default;
 $hamburger-padding-y           : 0px !default;
 $hamburger-layer-width         : 28px !default;
 $hamburger-layer-height        : 3px !default;
@@ -65,7 +65,7 @@ $hamburger-types: (
 
 // Base Hamburger (We need this)
 // ==================================================
-@import "base";
+@import "./base";
 
 // Hamburger types
 // ==================================================
@@ -82,8 +82,8 @@ $hamburger-types: (
 // @import "types/arrowturn";
 // @import "types/arrowturn-r";
 // @import "types/boring";
-@import "types/collapse";
-@import "types/collapse-r";
+// @import "types/collapse";
+// @import "types/collapse-r";
 // @import "types/elastic";
 // @import "types/elastic-r";
 // @import "types/emphatic";
@@ -93,8 +93,8 @@ $hamburger-types: (
 // @import "types/slider-r";
 // @import "types/spin";
 // @import "types/spin-r";
-// @import "types/spring";
-// @import "types/spring-r";
+@import "types/spring";
+@import "types/spring-r";
 // @import "types/stand";
 // @import "types/stand-r";
 // @import "types/squeeze";
